--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -1,10 +1,11 @@
 pipeline {
-    agent {
-        docker {
-            image 'abhishekf5/maven-abhishek-docker-agent:v1'
-            args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
-        }
-    }
+    agent any
+    // agent {
+    //     docker {
+    //         image 'abhishekf5/maven-abhishek-docker-agent:v1'
+    //         args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+    //     }
+    // }
     stages {
         stage('Build and Test') {
             steps {
