--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -1,11 +1,11 @@
 pipeline {
-    agent any
-    // agent {
-    //     docker {
-    //         image 'abhishekf5/maven-abhishek-docker-agent:v1'
-    //         args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
-    //     }
-    // }
+
+    agent {
+        docker {
+            image 'abhishekf5/maven-abhishek-docker-agent:v1'
+            args '--user root -v /var/run/docker.sock:/var/run/docker.sock -v /usr/bin/docker:/usr/bin/docker'
+        }
+    }
     stages {
         stage('Build and Test') {
             steps {
