--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -1,10 +1,8 @@
 pipeline {
 
-    agent {
-        docker {
-            image 'abhishekf5/maven-abhishek-docker-agent:v1'
-            args '--user root -v /var/run/docker.sock:/var/run/docker.sock -v /usr/bin/docker:/usr/bin/docker'
-        }
+    agent any
+    tools {
+        maven "Maven-3.9"
     }
     stages {
         stage('Build and Test') {
