--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -1,8 +1,10 @@
 pipeline {
 
-    agent any
-    tools {
-        maven "maven"
+    agent {
+        docker {
+            image 'abhishekf5/maven-abhishek-docker-agent:v1'
+            args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+        }
     }
     stages {
         stage('Build and Test') {
