--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -1,5 +1,4 @@
 pipeline {
-
     agent {
         docker {
             image 'abhishekf5/maven-abhishek-docker-agent:v1'
@@ -25,13 +24,14 @@ pipeline {
         stage('Build and Push Docker Image') {
             environment {
                 DOCKER_IMAGE = "abanobmorkos10/ultimate-cicd:${BUILD_NUMBER}"
+                REGISTRY_CREDENTIALS = credentials('docker-credentials')
             }
             steps {
                 script {
-                    withCredentials([usernamePassword(credentialsId: 'docker-credentials', usernameVariable: 'USER', passwordVariable: 'PASS')]) {
-                        sh "docker login -u ${USER} -p ${PASS}"
-                        sh "docker build spring-boot-app/. -t ${DOCKER_IMAGE}"
-                        sh "docker push ${DOCKER_IMAGE}"
+                    sh "cd spring-boot-app && docker build -t ${DOCKER_IMAGE} ."
+                    def dockerImage = docker.image("${DOCKER_IMAGE}")
+                    docker.withRegistry('https://index.docker.io/v1/', "docker-credentials") {
+                        dockerImage.push()
                     }
                 }
             }
@@ -42,7 +42,6 @@ pipeline {
                     sh '''
                         git config user.email "abanobmorkos10@gmail.com"
                         git config user.name "abanobmorkosgad"
-                        BUILD_NUMBER=${BUILD_NUMBER}
                         sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yml
                         git remote set-url origin https://${USER}:${PASS}@github.com/abanobmorkosgad/complete_CI-CD_jenkins_argo-cd-.git
                         git add spring-boot-app-manifests/deployment.yml
